# spren-ai-terminal-assistant-rust

./: .gitignore  Cargo.toml  README.md  build_data.py  check_data.py  shell_instruct_dataset.jsonl  shell_instruct_dataset_v2.jsonl
.github/workflows/: release.yml
docs/: PROJECT_PLAN.md
src/: ai.rs  config.rs  context.rs  local_llm.rs  main.rs  tui.rs
