[package]
name = "spren"
version = "0.4.0"
edition = "2021"
description = "An AI-powered shell assistant that helps with command-line operations"
authors = ["Shubhankar Madgulkar <shubhankar2205@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/smadgulkar/spren"
repository = "https://github.com/smadgulkar/spren"
keywords = ["cli", "ai", "assistant", "shell", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = ["cloud"]
cloud = []
local = ["candle-core", "candle-transformers", "tokenizers", "once_cell"]
tui = ["ratatui", "crossterm"]

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
colored = "2.0"
dotenv = "0.15"
toml = "0.8.19"
dirs = "5.0.1"

# Local LLM dependencies (optional) - for quantized GGUF inference
candle-core = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
tokenizers = { version = "0.20", optional = true }
once_cell = { version = "1.19", optional = true }

# TUI dependencies (optional)
ratatui = { version = "0.28", optional = true }
crossterm = { version = "0.28", optional = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bin]]
name = "spren"
path = "src/main.rs"
